# models/customer.py
@@ -1,6 +1,7 @@
 from database import db, Base
 from sqlalchemy.orm import Mapped, mapped_column
 from typing import List
+from models.cart import cart
 
 
 class Customers(Base):
@@ -19,14 +20,6 @@ class Customers(Base):
     orders: Mapped[List["Orders"]] = db.relationship(back_populates='customers')
     #create a cart many to many relationship between customer and products
     #customer_products association table will be the CART should look just like order_products
-    #cart: Mapped[List['Products]] = db.relationship(secondary=cart)
+    cart: Mapped[List['Products']] = db.relationship(secondary=cart)
 
-    #customer.cart.append(<product object>)
-    #customer.cart.remove(<product object>)
-
-    #will need db.session.add and db.session.commit after adding and removing items
-
-    #view would be return cart
-
-    #place order will utilize the customers cart do a for loop for item in customer.cart, order.append item and customer.cart.remove item
-    #you will add both the customer and the order and commit them both
+   
